fix: add overflow to panel

--- a/core_explore_keyword_registry_app/static/core_explore_keyword_registry_app/user/css/search/search.css
+++ b/core_explore_keyword_registry_app/static/core_explore_keyword_registry_app/user/css/search/search.css
@@ -33,6 +33,10 @@ div[name="result"] a[class="collapsed"] .fa-chevron-up {
     font-size: 0.9em;
 }
 
+.panel-body {
+    overflow: auto;
+}
+
 .description {
     text-align: justify;
     text-justify: inter-word;
